# CricBot

./: .env  .qovery.yml  Dockerfile  README.md  keep_alive.py  main.py  reddit.py
Cogs/: ai_m.py  ipl_m.py  wiki_m.py
src/: .replit  main.py  pyproject.toml  reddit.py  requirements.txt  scoretable.py
src/Cogs/: covid_m.py  memes_m.py  music_m.py  stack_m.py
