[tool.poetry]
name = "repl_python3_cricbot"
version = "0.1.0"
description = ""
authors = ["Vihar Devalla <vihardevalla@gmail.com> , Srinivasa Raghavan S <sraghavsrg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
html-table-parser = "^0.1.0"
aiohttp = "^3.7.4"
discord = "^1.0.1"
pandas = "^1.2.4"
youtube-dl = "^2021.4.26"
pynacl = "^1.4.0"
html-table-parser-python3 = "^0.2.0"
pil-compat = "^1.0.0"
pytesseract = "^0.3.7"
discord-py-slash-command = "^1.1.2"
wikipedia = "^1.4.0"
html5lib = "^1.0b8"
google = "^3.0.0"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
